--- a/package.json
+++ b/package.json
@@ -22,38 +22,39 @@
     "test:e2e": "NODE_ENV=test jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
-    "@nestjs/common": "^7.6.5",
+    "@nestjs/common": "^7.6.15",
     "@nestjs/config": "^0.4.2",
-    "@nestjs/core": "^7.2.0",
-    "@nestjs/microservices": "^7.3.2",
-    "@nestjs/platform-express": "^7.5.5",
+    "@nestjs/core": "^7.6.15",
+    "@nestjs/microservices": "^7.6.15",
+    "@nestjs/platform-express": "^7.6.15",
     "amqp-connection-manager": "^3.2.1",
     "amqplib": "^0.6.0",
     "class-transformer": "^0.3.1",
     "class-validator": "^0.12.2",
     "cookie-parser": "^1.4.5",
     "csurf": "^1.11.0",
-    "dotenv": "^8.2.0",
+    "dotenv": "^8.6.0",
     "express": "^4.17.1",
     "express-rate-limit": "^5.2.3",
-    "helmet": "^4.2.0",
+    "fast-xml-parser": "^3.19.0",
+    "helmet": "^4.6.0",
     "parse-domain": "^3.0.3",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
-    "rxjs": "^6.5.4"
+    "rxjs": "^6.6.7"
   },
   "devDependencies": {
-    "@nestjs/cli": "^7.0.0",
-    "@nestjs/schematics": "^7.0.0",
-    "@nestjs/testing": "^7.0.0",
+    "@nestjs/cli": "^7.6.0",
+    "@nestjs/schematics": "^7.3.1",
+    "@nestjs/testing": "^7.6.15",
     "@types/cookie-parser": "^1.4.2",
-    "@types/csurf": "^1.11.0",
+    "@types/csurf": "^1.11.1",
     "@types/express": "^4.17.9",
     "@types/express-rate-limit": "^5.1.0",
     "@types/helmet": "^4.0.0",
     "@types/jest": "26.0.10",
-    "@types/node": "^13.9.1",
-    "@types/supertest": "^2.0.8",
+    "@types/node": "^13.13.51",
+    "@types/supertest": "^2.0.11",
     "@typescript-eslint/eslint-plugin": "3.9.1",
     "@typescript-eslint/parser": "3.9.1",
     "eslint": "7.7.0",
