--- a/package.json
+++ b/package.json
@@ -22,13 +22,14 @@
     "test:e2e": "NODE_ENV=test jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "@mux/mux-node": "^3.2.3",
     "@nestjs/common": "^7.6.15",
     "@nestjs/config": "^0.4.2",
     "@nestjs/core": "^7.6.15",
     "@nestjs/microservices": "^7.6.15",
     "@nestjs/platform-express": "^7.6.15",
     "amqp-connection-manager": "^3.2.1",
-    "amqplib": "^0.6.0",
+    "amqplib": "^0.8.0",
     "class-transformer": "^0.3.1",
     "class-validator": "^0.12.2",
     "cookie-parser": "^1.4.5",
